# OpenGL_Voxel

./: .gitattributes  CMakeLists.txt  README.md
includes/: config.hpp  debug.hpp  mesh.hpp  onLoad.hpp  options.hpp  types.hpp
libraries/GLAD/: glad.c  glad.h
shaders/: voxelFragment.glsl  voxelVertex.glsl
src/: load.cpp  loadMeshes.cpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/gfx/: Texture.cpp  Texture.hpp  VoxelMesh.cpp  VoxelMesh.hpp  VoxelShader.cpp  VoxelShader.hpp
src/onLoad/: initGLAD.cpp  initGLFW.cpp  loadMeshes.cpp  loadVoxelShader.cpp
src/world/: Chunk.cpp  Chunk.hpp  ChunkGeneration.cpp  ChunkMesh.cpp  SubChunk.cpp  SubChunk.hpp  ThreadPool.hpp  World.cpp  World.hpp
src/world/chunk/: Chunk.cpp  Chunk.hpp
src/world/chunk/subchunk/: SubChunk.cpp  SubChunk.hpp
